--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             border-radius: 50%;
             border: 2px solid #ecd3c2;
             background-color: transparent;
-            background-image: url('https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fpublic.notion-static.com%2F2b93b1c7-c44d-4e5a-af07-7323759bfde4%2F%25EA%25B8%25B8%25EB%2593%259C%25EB%25A1%259C%25EA%25B3%25A0.png?table=custom_emoji&id=1d63a2a1-5614-8030-917c-007a64f77bbe&spaceId=20199b01-c785-49af-adee-fd75ca9714cf&width=160&userId=196d872b-594c-8170-839f-00021609d67b&cache=v2');
+            background-image: url('https://github.com/birdsol1122/mbngm_fortune_widget/blob/main/guild-logo.png?raw=true');
             background-size: cover;
             background-position: center;
             box-shadow: 0 3px 8px rgba(209, 168, 149, 0.2);
