--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="guild-name">심야식당</div>
         <div class="notice-box">
             <div class="notice-title">길드 공지사항</div>
-            <div id="guild-notice">길드 포인트 모으는 중! 매일 최초 접속시 [길드] 메뉴 한번씩 클릭해주세요!<br>현재 부길마 [퍼리헌터뿅]이 귓말로 찾아뵙는 중!<br>여러분의 수동접속 시간을 알려주세요! 😺</div>
+            <div id="guild-notice">길드 포인트 모으는 중! 매일 최초 접속시 [길드] 메뉴 한번씩 클릭해주세요! 현재 부길마 [퍼리헌터뿅]이 귓말로 찾아뵙는 중!<br>여러분의 수동접속 시간을 알려주세요! 😺</div>
         </div>
         <div class="date" id="current-date"></div>
         <div class="emoji" id="fortune-emoji"></div>
